# frontline-worker-support-ai

./: README.md
server/: .gitignore  TODOS.txt  cases.json  pyproject.toml
server/src/frontline_worker_support_ai/agents/analyst_agent/: agent.py  instructions.py
server/src/frontline_worker_support_ai/agents/civic_agent/: agent.py  instructions.py
server/src/frontline_worker_support_ai/agents/guidance_agent/: instructions.py
server/src/frontline_worker_support_ai/agents/hospital_agent/: __init__.py
server/src/frontline_worker_support_ai/agents/police_agent/: agent.py  instructions.py
server/src/frontline_worker_support_ai/validations/: __init__.py  models.py
server/src/frontline_worker_support_ai/validations/service_db/: services.json
src/frontline_worker_support_ai/agents/: __init__.py
src/frontline_worker_support_ai/agents/analyst_agent/: __init__.py
src/frontline_worker_support_ai/agents/civic_agent/: __init__.py
src/frontline_worker_support_ai/agents/guidance_agent/: __init__.py  agent.py
src/frontline_worker_support_ai/agents/hospital_agent/: agent.py  instructions.py
src/frontline_worker_support_ai/agents/police_agent/: __init__.py
src/frontline_worker_support_ai/validations/: models.py
