[project]
name = "frontline-worker-support-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "codeWithHak", email = "huzairahmedkhan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.3.3",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
frontline-worker-support-ai = "frontline_worker_support_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
